# fiftyone-mcp-server

./: .gitignore  .pre-commit-config.yaml  LICENSE  QUICKSTART.md  README.md  STYLE_GUIDE.md  fiftyone.yml  inspector-config.json  mcp.json  pylintrc  pyproject.toml  server.json
examples/: chatgpt_integration.md
src/fiftyone_mcp/: __init__.py  executor.py  registry.py  server.py
src/fiftyone_mcp/config/: settings.json
src/fiftyone_mcp/tools/: __init__.py  aggregations.py  app_config.py  datasets.py  debug.py  evaluation.py  operations.py  operators.py  pipelines.py  plugins.py  samples.py  schema.py  session.py  utils.py  view_builder.py  views.py
tests/: __init__.py  test_aggregations.py  test_app_config.py  test_datasets.py  test_debug.py  test_executor.py  test_operations.py  test_operators.py  test_pipelines.py  test_plugins.py  test_registry.py  test_samples.py  test_schema.py  test_session.py  test_view_builder.py  test_views.py
