[tool.poetry]
name = "fiftyone-mcp-server"
version = "0.1.0"
description = "MCP server exposing FiftyOne dataset analysis tools"
authors = ["FiftyOne MCP Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "fiftyone_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fiftyone = "^1.0"
mcp = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.6.0"

[tool.poetry.scripts]
fiftyone-mcp = "fiftyone_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
