[tool.poetry]
name = "fiftyone-mcp-server"
version = "0.1.1"
description = "MCP server exposing FiftyOne dataset analysis tools"
authors = ["Adonai Vera <adonai.vera@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AdonaiVera/fiftyone-mcp-server"
repository = "https://github.com/AdonaiVera/fiftyone-mcp-server"
documentation = "https://github.com/AdonaiVera/fiftyone-mcp-server#readme"
keywords = ["mcp", "fiftyone", "computer-vision", "ai", "datasets", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "fiftyone_mcp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fiftyone = "^1.0"
mcp = "^0.9.0"
torch = "^2.9.1"
torchvision = "^0.24.1"
ultralytics = "^8.3.240"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
pylint = "^3.0.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
fiftyone-mcp = "fiftyone_mcp.server:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 79
target-version = ['py310']
